added adapters, changed to ArrayList